Update the application to use Helidon MP 2.0